; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_dataset.c_zfs_open_bookmarks_cb.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_dataset.c_zfs_open_bookmarks_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zfs_open_bookmarks_cb_data = type { i32*, i32 }

@EEXIST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @zfs_open_bookmarks_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfs_open_bookmarks_cb(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.zfs_open_bookmarks_cb_data*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.zfs_open_bookmarks_cb_data*
  store %struct.zfs_open_bookmarks_cb_data* %8, %struct.zfs_open_bookmarks_cb_data** %6, align 8
  %9 = load %struct.zfs_open_bookmarks_cb_data*, %struct.zfs_open_bookmarks_cb_data** %6, align 8
  %10 = getelementptr inbounds %struct.zfs_open_bookmarks_cb_data, %struct.zfs_open_bookmarks_cb_data* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @zfs_get_name(i32* %12)
  %14 = call i64 @strcmp(i32 %11, i32 %13)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load %struct.zfs_open_bookmarks_cb_data*, %struct.zfs_open_bookmarks_cb_data** %6, align 8
  %19 = getelementptr inbounds %struct.zfs_open_bookmarks_cb_data, %struct.zfs_open_bookmarks_cb_data* %18, i32 0, i32 0
  store i32* %17, i32** %19, align 8
  %20 = load i32, i32* @EEXIST, align 4
  store i32 %20, i32* %3, align 4
  br label %24

21:                                               ; preds = %2
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @zfs_close(i32* %22)
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %21, %16
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i64 @strcmp(i32, i32) #1

declare dso_local i32 @zfs_get_name(i32*) #1

declare dso_local i32 @zfs_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
